[package]
name = "acid"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"

[dependencies]
libc = "0.2"
spin = "0.9"
redox_syscall = { version = "0.5.17", features = ["std"] }
redox-scheme = "0.6"
anyhow = "1.0.81"
nix = { version = "0.29.0", features = ["process", "signal"] }
signal-hook = "0.3.17"
libredox = "0.1.8"

#strace = { git = "https://gitlab.redox-os.org/redox-os/strace-redox", default-features = false }
#strace = { path = "../../strace/source", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.47.0"
